<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_no_"
                    android:textColor="@color/text_blank"
                    />

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_orders_btn1"
                    android:layout_marginLeft="@dimen/dp_24"
                    android:textSize="22sp"
                    android:text="201584200545"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_money_"
                    android:textColor="@color/text_blank"
                    />

                <TextView
                    android:id="@+id/tv_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_orders_btn2"
                    android:layout_marginLeft="@dimen/dp_24"
                    android:textSize="22sp"
                    android:text="201584200545"
                    />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginLeft="20dp"
            android:gravity="bottom"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_money"
                android:textColor="@color/text_blank"
                />

            <TextView
                android:id="@+id/tv_pay_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_red"
                android:layout_marginLeft="@dimen/dp_24"
                android:textSize="32sp"
                android:text="55:00"
                />
        </LinearLayout>



            <View style="@style/Line_Style" android:layout_marginTop="@dimen/dp_32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/choice_pay_type"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/text_blank"
                />

           <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <RadioButton
                   android:id="@+id/rb_union"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:drawableLeft="@drawable/ic_unionpay"
                   android:drawablePadding="@dimen/dp_12"
                   android:text="@string/union_pay"
                   />

               <RadioButton
                   android:id="@+id/rb_scan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:drawableLeft="@drawable/ic_qrcode_pay"
                   android:text="@string/union_pay"
                   android:drawablePadding="@dimen/dp_12"
                    android:checked="true"
                   />

               <RadioButton
                   android:id="@+id/rb_mall"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:drawableLeft="@drawable/ic_mall_paly"
                   android:drawablePadding="@dimen/dp_12"
                   android:text="@string/mall_pay"
                   />

           </RadioGroup>




            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pay"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/btn_bg"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>