<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">


    <include layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_64"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sales_no_"
                />

            <EditText
                android:id="@+id/et_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edit_height"
                android:background="@drawable/edit_bg"
                android:maxLines="1"
                android:maxLength="32"
                android:layout_marginLeft="@dimen/margin"
                android:padding="@dimen/margin_1_2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_money_"
                />

            <EditText
                android:id="@+id/et_money"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edit_height"
                android:background="@drawable/edit_bg"
                android:maxLines="1"
                android:maxLength="32"
                android:layout_marginLeft="@dimen/margin"
                android:padding="@dimen/margin_1_2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_cause_"
                android:gravity="top"
                />

            <EditText
                android:id="@+id/et_cause"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="160dp"
                android:background="@drawable/edit_bg"
                android:maxLines="6"
                android:layout_marginLeft="@dimen/margin"
                android:padding="@dimen/margin_1_2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp_46"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/btn_bg"
                />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginLeft="@dimen/dp_24"
                android:background="@drawable/btn_bg"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>