<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_72"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input_barcode"
                        />

                    <FrameLayout
                        android:layout_width="200dp"
                        android:layout_height="38dp"
                        android:background="@drawable/input_bg"
                        android:layout_marginTop="@dimen/dp_10">
                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp_8"
                            />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_40"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money"
                        />

                    <EditText
                        android:id="@+id/et_money"
                        android:layout_width="200dp"
                        android:layout_height="38dp"
                        android:background="@drawable/input_bg"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:padding="@dimen/dp_6"
                        android:layout_marginTop="@dimen/dp_10"
                        android:inputType="numberDecimal"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_46"
                    android:orientation="vertical"
                    android:gravity="center">


                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:background="@drawable/btn_bg"
                        android:paddingLeft="@dimen/dp_24"
                        android:paddingRight="@dimen/dp_24"
                        />

                    <Button
                        android:id="@+id/btn_query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/query_list"
                        android:layout_marginTop="@dimen/dp_46"
                        android:background="@drawable/btn_bg"
                        android:paddingLeft="@dimen/dp_24"
                        android:paddingRight="@dimen/dp_24"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

            <LinearLayout
                android:id="@+id/ll_div"
                android:background="#66000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical"/>

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/bottom_div"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        android:layout_margin="@dimen/dp_12"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:paddingTop="@dimen/dp_4"
        >

        <ImageView
            android:id="@+id/iv_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_down"
            android:layout_gravity="center_horizontal"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/btn_bg"
            android:layout_margin="@dimen/margin"
            />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>